.metals/.reports/metals/2023-09-13/r_scala-toplevel-mtags_23-46-44-505
id: file://<WORKSPACE>/Signup.scala:[466..466) in Input.VirtualFile("file://<WORKSPACE>/Signup.scala", "class Signup {

    private var id: Int = 0
    private var first_name: String = " "
    private var last_name: String = " "
    private var email: String = " "
    private var username: String = " "
    private var phone_number: String = " "
    private var gender: String = " "
    private var pass: String = " "
    private var pass2: String = " "

    def set_id(id: Int) {
        id = id
    }

    def get_id(): Int ={
        return id
    }
}

object 

    ")
file://<WORKSPACE>/Signup.scala:24: error: expected identifier; obtained eof
    
    ^